working on the html file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Git Confirmation App</title>
   </head>
   <body>
-    <div>This is the main section for Git Confirmation App.</div>
+    <div>
+      <h1>Let's Learn the JavaScript from Scratch</h1>
+      <div>
+        <h2>First Day</h2>
+        <summary>What is JavaScript?</summary>
+      </div>
+    </div>
   </body>
 </html>
