changes the things

--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Git Confirmation App</title>
+    <title>Learn JS</title>
   </head>
   <body>
     <div>
       <h1>Let's Learn the JavaScript from Scratch</h1>
       <div>
         <h2>First Day</h2>
-        <summary>What is JavaScript?</summary>
+        <details>
+          <summary>What is JavaScript?</summary>
+          <p>
+            JavaScript is a dynamic programming language that's used for web
+            development, in web applications, for game development, and lots
+            more. It allows you to implement dynamic features on web pages that
+            cannot be done with only HTML and CSS.
+          </p>
+        </details>
       </div>
     </div>
   </body>
