--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
           </p>
         </details>
       </div>
+      <div>
+        <h2>Second Day</h2>
+        <details>
+          <summary>What is JavaScript?</summary>
+          <p>
+            JavaScript is a dynamic programming language that's used for web
+            development, in web applications, for game development, and lots
+            more. It allows you to implement dynamic features on web pages that
+            cannot be done with only HTML and CSS.
+          </p>
+        </details>
+      </div>
     </div>
   </body>
 </html>
